教師あり学習

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.pipeline import make_pipeline\n",
     "from transformers import BertJapaneseTokenizer, BertModel\n",
     "import torch\n",
     "from sudachipy import dictionary\n",
@@ -398,7 +399,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## fasttext, kmeans"
+    "## fasttext, kmeans\n",
+    "モデル（cc.ja.300.bin）を以下からダウンロード\n",
+    "\n",
+    "https://fasttext.cc/docs/en/crawl-vectors.html"
    ]
   },
   {
@@ -481,9 +485,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ct_cf_tt_tf': (30397, 240819, 31432, 239784),\n",
+       " 'tp_fp_tn_fn': (19530, 11902, 228917, 10867),\n",
+       " 'precision': 0.6213413082209214,\n",
+       " 'recall': 0.6424976148962068,\n",
+       " 'f1': 0.6317423862588752,\n",
+       " 'accuracy': 0.9160484632175093}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 参考 \n",
+    "def supervised_naivebayse_vector(texts, *, model=None, train_text = train_df[\"title\"], train_category=train_df[\"category\"]):\n",
+    "  if model is None:\n",
+    "    model = make_pipeline(\n",
+    "      TfidfVectorizer(\n",
+    "                      analyzer=\"char\"\n",
+    "                      , ngram_range=(3,3)\n",
+    "                      , max_df=0.9\n",
+    "                      , min_df = 5)\n",
+    "      , MultinomialNB()\n",
+    "    )\n",
+    "    model.fit(train_text, train_category)\n",
+    "  return model.predict(texts)\n",
+    "test_labels = supervised_naivebayse_vector(test_df[\"title\"])\n",
+    "cluster_similarity(test_df[\"category\"], test_labels)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ct_cf_tt_tf': (30397, 240819, 31432, 239784),\n",
+       " 'tp_fp_tn_fn': (19530, 11902, 228917, 10867),\n",
+       " 'precision': 0.6213413082209214,\n",
+       " 'recall': 0.6424976148962068,\n",
+       " 'f1': 0.6317423862588752,\n",
+       " 'accuracy': 0.9160484632175093}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -492,7 +552,23 @@
    "source": [
     "# References\n",
     "\n",
-    "[SudachiPy](https://github.com/WorksApplications/SudachiPy/blob/develop/docs/tutorial.md)\n"
+    "文章のベクトル化\n",
+    "* [SudachiPy](https://github.com/WorksApplications/SudachiPy/blob/develop/docs/tutorial.md)\n",
+    "* [tf-idfでベクトル化したラジオ感想ツイートをクラスタリングして可視化する](https://note.com/himaratsu/n/necefee6e5454)\n",
+    "* [機械学習 〜 テキスト分類（ナイーブベイズ分類器） 〜](https://qiita.com/fujin/items/39d450b910bf2be866b5)\n",
+    "* [fastTextとDoc2Vecのモデルを作成してニュース記事の多クラス分類の精度を比較する](https://qiita.com/kazuki_hayakawa/items/ca5d4735b9514895e197)\n",
+    "* [【日本語モデル付き】2020年に自然言語処理をする人にお勧めしたい文ベクトルモデル](https://qiita.com/sonoisa/items/1df94d0a98cd4f209051)\n",
+    "* [https://huggingface.co/sonoisa/sentence-bert-base-ja-mean-tokens-v2](https://huggingface.co/sonoisa/sentence-bert-base-ja-mean-tokens-v2)\n",
+    "\n",
+    "エラー・デバッグ関係\n",
+    "* [Pytorch: Can't call numpy() on Variable that requires grad. Use var.detach().numpy() instead](https://stackoverflow.com/questions/55466298/pytorch-cant-call-numpy-on-variable-that-requires-grad-use-var-detach-num)\n",
+    "  * sentence-bertの出力をkmeansに入力したらエラーが出たときの解消方法\n",
+    "\n",
+    "\n",
+    "クラスタリング結果の比較方法\n",
+    "* [２つのクラスタリング結果がどのくらい似ているかの指標](https://takemikami.com/2019/02/25/clustdiff.html)\n",
+    "* [Precision and recall for clustering?](https://stats.stackexchange.com/questions/15158/precision-and-recall-for-clustering/80194)\n",
+    "* [Evaluation of clustering](https://nlp.stanford.edu/IR-book/html/htmledition/evaluation-of-clustering-1.html)"
    ]
   }
  ],
