タイポ修正

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn import metrics\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from transformers import BertJapaneseTokenizer, BertModel\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +59,11 @@
     "  scores = {\n",
     "    \"ct_cf_tt_tf\": (correct_true, correct_false, test_true, test_false)\n",
     "    , \"tp_fp_tn_fn\": (true_positive, false_positive, true_negative, false_negative)\n",
-    "    , \"precision\": precision_score(correct_pairs, test_pairs)\n",
-    "    , \"recall\": recall_score(correct_pairs, test_pairs)\n",
-    "    , \"f1\": f1_score(correct_pairs, test_pairs)\n",
-    "    , \"accuracy\": accuracy_score(correct_pairs, test_pairs)\n",
+    "    , \"precision\": metrics.precision_score(correct_pairs, test_pairs)\n",
+    "    , \"recall\": metrics.recall_score(correct_pairs, test_pairs)\n",
+    "    , \"f1\": metrics.f1_score(correct_pairs, test_pairs)\n",
+    "    , \"accuracy\": metrics.accuracy_score(correct_pairs, test_pairs)\n",
+    "    , \"purity\": metrics.pur\n",
     "  }\n",
     "  return scores    "
    ]
@@ -311,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# k-meansでクラスタ分析。とりあえず3つのグループに分けてみる\n",
+    "# k-meansでクラスタ分析。とりあえず9つのグループに分けてみる\n",
     "def kmeans_clustering(vectors, *, n_clusters=9):\n",
     "  km_model = KMeans(n_clusters=n_clusters, random_state = 0)\n",
     "  km_model.fit(vectors)\n",
@@ -522,29 +523,6 @@
     "cluster_similarity(test_df[\"category\"], test_labels)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ct_cf_tt_tf': (30397, 240819, 31432, 239784),\n",
-       " 'tp_fp_tn_fn': (19530, 11902, 228917, 10867),\n",
-       " 'precision': 0.6213413082209214,\n",
-       " 'recall': 0.6424976148962068,\n",
-       " 'f1': 0.6317423862588752,\n",
-       " 'accuracy': 0.9160484632175093}"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
