--- a/livedoor.ipynb
+++ b/livedoor.ipynb
@@ -11,6 +11,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* livedoorコーパスをダウンロード\n",
+    "  * https://www.rondhuit.com/download.html\n",
+    "* 解凍して得たtextフォルダをプロジェクトルートに配置"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
