クラスタリングの途中結果を保存。処理を分離。bcubedを追加

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -31,20 +31,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ペアベース"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_pair_label(cluster):\n",
-    "  labels = []\n",
-    "  for i0, v0 in enumerate(cluster):\n",
-    "    for i1, v1 in enumerate(cluster):\n",
-    "      if i1<=i0: continue\n",
-    "      labels.append(v0==v1)\n",
-    "  return labels\n",
     "\n",
-    "def cluster_similarity(correct_cluster, test_cluster):\n",
+    "def cluster_similarity_pair(correct_cluster, test_cluster):\n",
+    "  def get_pair_label(cluster):\n",
+    "    labels = []\n",
+    "    for i0, v0 in enumerate(cluster):\n",
+    "      for i1, v1 in enumerate(cluster):\n",
+    "        if i1<=i0: continue\n",
+    "        labels.append(v0==v1)\n",
+    "    return labels\n",
+    "\n",
+    "  correct_pairs = get_pair_label(correct_cluster)\n",
+    "  test_pairs = get_pair_label(test_cluster)\n",
+    "  combined_pairs = [(v0,v1) for v0, v1 in zip(correct_pairs, test_pairs)]\n",
+    "\n",
+    "  correct_true, correct_false = correct_pairs.count(True), correct_pairs.count(False)\n",
+    "  test_true, test_false = test_pairs.count(True), test_pairs.count(False)\n",
+    "  true_positive = combined_pairs.count((True, True))\n",
+    "  false_positive = combined_pairs.count((False, True))\n",
+    "  true_negative = combined_pairs.count((False, False))\n",
+    "  false_negative = combined_pairs.count((True, False))\n",
+    "\n",
+    "  scores = {\n",
+    "    \"ct_cf_tt_tf\": (correct_true, correct_false, test_true, test_false)\n",
+    "    , \"tp_fp_tn_fn\": (true_positive, false_positive, true_negative, false_negative)\n",
+    "    , \"precision\": metrics.precision_score(correct_pairs, test_pairs)\n",
+    "    , \"recall\": metrics.recall_score(correct_pairs, test_pairs)\n",
+    "    , \"f1\": metrics.f1_score(correct_pairs, test_pairs)\n",
+    "    , \"accuracy\": metrics.accuracy_score(correct_pairs, test_pairs)\n",
+    "    , \"purity\": metrics.pur\n",
+    "  }\n",
+    "  return scores    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BCubed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def cluster_similarity_bcubed(correct_cluster, test_cluster):\n",
+    "  def get_pair_label(cluster):\n",
+    "    labels = []\n",
+    "    for i0, v0 in enumerate(cluster):\n",
+    "      for i1, v1 in enumerate(cluster):\n",
+    "        if i1<=i0: continue\n",
+    "        labels.append(v0==v1)\n",
+    "    return labels\n",
+    "\n",
     "  correct_pairs = get_pair_label(correct_cluster)\n",
     "  test_pairs = get_pair_label(test_cluster)\n",
     "  combined_pairs = [(v0,v1) for v0, v1 in zip(correct_pairs, test_pairs)]\n",
