--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -601,6 +601,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## guided lda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# under construction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Clustering"
    ]
   },
@@ -665,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,6 +699,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = [\n",
+    "  \"pred_trigram_tfidf_kmeans\"\n",
+    "  , \"pred_word_tfidf_kmeans\"\n",
+    "  , \"pred_fasttext_kmeans\"\n",
+    "  , \"pred_sentencebert_kmeans\"\n",
+    "  , \"pred_bert_kmeans\"\n",
+    "  , \"pred_lda\"\n",
+    "  , \"pred_supervised_naivebayse\"\n",
+    "]\n",
+    "test_df = pd.read_csv(\"prediction/livedoor.csv\")\n",
+    "\n",
+    "def display_similarity(cluster_similarity_func, *, columns = columns, correct_label = test_df[\"category\"], test_labels = test_df):\n",
+    "  for col in columns:\n",
+    "    print(col)\n",
+    "    print(cluster_similarity_func(correct_label, test_labels[col]))\n",
+    "    print(\"\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -691,43 +731,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ngram tfidf, kmeans\n",
+      "pred_trigram_tfidf_kmeans\n",
       "{'ct_cf_tt_tf': (30397, 240819, 172013, 99203), 'tp_fp_tn_fn': (21785, 150228, 90591, 8612), 'precision': 0.12664740455663234, 'recall': 0.7166825673586209, 'f1': 0.21525616323304184, 'accuracy': 0.4143413367942894}\n",
-      "word tfidf, kmeans\n",
+      "\n",
+      "pred_word_tfidf_kmeans\n",
       "{'ct_cf_tt_tf': (30397, 240819, 85461, 185755), 'tp_fp_tn_fn': (12802, 72659, 168160, 17595), 'precision': 0.14979932366810592, 'recall': 0.4211599828930487, 'f1': 0.22099466588409952, 'accuracy': 0.667224647513421}\n",
-      "fasttext, kmeans\n",
+      "\n",
+      "pred_fasttext_kmeans\n",
       "{'ct_cf_tt_tf': (30397, 240819, 33096, 238120), 'tp_fp_tn_fn': (6382, 26714, 214105, 24015), 'precision': 0.19283297075175249, 'recall': 0.20995492976280555, 'f1': 0.2010300348069866, 'accuracy': 0.812957200165182}\n",
-      "sentencebert, kmeans\n",
+      "\n",
+      "pred_sentencebert_kmeans\n",
       "{'ct_cf_tt_tf': (30397, 240819, 32532, 238684), 'tp_fp_tn_fn': (8420, 24112, 216707, 21977), 'precision': 0.25882208287224884, 'recall': 0.277001019837484, 'f1': 0.2676031718285687, 'accuracy': 0.8300653353784437}\n",
-      "bert, kmeans\n",
+      "\n",
+      "pred_bert_kmeans\n",
       "{'ct_cf_tt_tf': (30397, 240819, 35909, 235307), 'tp_fp_tn_fn': (11057, 24852, 215967, 19340), 'precision': 0.30791723523350695, 'recall': 0.36375300194098104, 'f1': 0.33351431243024765, 'accuracy': 0.837059760486107}\n",
-      "supervised, naivebayse\n",
-      "{'ct_cf_tt_tf': (30397, 240819, 31432, 239784), 'tp_fp_tn_fn': (19530, 11902, 228917, 10867), 'precision': 0.6213413082209214, 'recall': 0.6424976148962068, 'f1': 0.6317423862588752, 'accuracy': 0.9160484632175093}\n"
+      "\n",
+      "pred_lda\n",
+      "{'ct_cf_tt_tf': (30397, 240819, 35660, 235556), 'tp_fp_tn_fn': (4342, 31318, 209501, 26055), 'precision': 0.12176107683679192, 'recall': 0.14284304372141987, 'f1': 0.13146222202037633, 'accuracy': 0.7884601203468822}\n",
+      "\n",
+      "pred_supervised_naivebayse\n",
+      "{'ct_cf_tt_tf': (30397, 240819, 31432, 239784), 'tp_fp_tn_fn': (19530, 11902, 228917, 10867), 'precision': 0.6213413082209214, 'recall': 0.6424976148962068, 'f1': 0.6317423862588752, 'accuracy': 0.9160484632175093}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "test_df = pd.read_csv(\"prediction/livedoor.csv\")\n",
-    "cluster_similarity_func = cluster_similarity_pair\n",
-    "print(\"ngram tfidf, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_trigram_tfidf_kmeans\"]))\n",
-    "print(\"word tfidf, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_word_tfidf_kmeans\"]))\n",
-    "print(\"fasttext, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_fasttext_kmeans\"]))\n",
-    "print(\"sentencebert, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_sentencebert_kmeans\"]))\n",
-    "print(\"bert, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_bert_kmeans\"]))\n",
-    "print(\"supervised, naivebayse\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_supervised_naivebayse\"]))"
+    "display_similarity(cluster_similarity_pair)"
    ]
   },
   {
@@ -739,68 +775,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ngram tfidf, kmeans\n",
+      "pred_trigram_tfidf_kmeans\n",
       "{'precision': 0.2903663500678426, 'recall': 0.8208955223880597, 'f1': 0.4289905782443096}\n",
-      "word tfidf, kmeans\n",
+      "\n",
+      "pred_word_tfidf_kmeans\n",
       "{'precision': 0.3514246947082768, 'recall': 0.582089552238806, 'f1': 0.43825928497049643}\n",
-      "fasttext, kmeans\n",
+      "\n",
+      "pred_fasttext_kmeans\n",
       "{'precision': 0.3147896879240163, 'recall': 0.34328358208955223, 'f1': 0.32841975688567476}\n",
-      "sentencebert, kmeans\n",
+      "\n",
+      "pred_sentencebert_kmeans\n",
       "{'precision': 0.41112618724559025, 'recall': 0.4056987788331072, 'f1': 0.4083944517821643}\n",
-      "bert, kmeans\n",
+      "\n",
+      "pred_bert_kmeans\n",
       "{'precision': 0.48846675712347354, 'recall': 0.5183175033921302, 'f1': 0.5029495989788865}\n",
-      "supervised, naivebayse\n",
-      "{'precision': 0.7815468113975577, 'recall': 0.7815468113975577, 'f1': 0.7815468113975577}\n"
+      "\n",
+      "pred_lda\n",
+      "{'precision': 0.1994572591587517, 'recall': 0.23744911804613297, 'f1': 0.2168013686508171}\n",
+      "\n",
+      "pred_supervised_naivebayse\n",
+      "{'precision': 0.7815468113975577, 'recall': 0.7815468113975577, 'f1': 0.7815468113975577}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "test_df = pd.read_csv(\"prediction/livedoor.csv\")\n",
-    "cluster_similarity_func = cluster_similarity_purity\n",
-    "print(\"ngram tfidf, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_trigram_tfidf_kmeans\"]))\n",
-    "print(\"word tfidf, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_word_tfidf_kmeans\"]))\n",
-    "print(\"fasttext, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_fasttext_kmeans\"]))\n",
-    "print(\"sentencebert, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_sentencebert_kmeans\"]))\n",
-    "print(\"bert, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_bert_kmeans\"]))\n",
-    "print(\"supervised, naivebayse\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_supervised_naivebayse\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "peachy            26\n",
-       "dokujo-tsushin     8\n",
-       "livedoor-homme     5\n",
-       "kaden-channel      3\n",
-       "smax               1\n",
-       "Name: category, dtype: int64"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_df.query(\"pred_sentencebert_kmeans == 5\")[\"category\"].value_counts()"
+    "display_similarity(cluster_similarity_purity)"
    ]
   },
   {
@@ -812,43 +819,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ngram tfidf, kmeans\n",
+      "pred_trigram_tfidf_kmeans\n",
       "{'precision': 0.7302436789202665, 'recall': 0.2562694948629095, 'f1': 0.3793951945032219}\n",
-      "word tfidf, kmeans\n",
+      "\n",
+      "pred_word_tfidf_kmeans\n",
       "{'precision': 0.4351869409102146, 'recall': 0.27031032765763474, 'f1': 0.3334825798222082}\n",
-      "fasttext, kmeans\n",
+      "\n",
+      "pred_fasttext_kmeans\n",
       "{'precision': 0.21664901046033372, 'recall': 0.1995891309097131, 'f1': 0.2077694637396775}\n",
-      "sentencebert, kmeans\n",
+      "\n",
+      "pred_sentencebert_kmeans\n",
       "{'precision': 0.2831008772589822, 'recall': 0.27139126072269565, 'f1': 0.2771224287171229}\n",
-      "bert, kmeans\n",
+      "\n",
+      "pred_bert_kmeans\n",
       "{'precision': 0.369014582491454, 'recall': 0.3341771760861575, 'f1': 0.350732924859773}\n",
-      "supervised, naivebayse\n",
-      "{'precision': 0.6364946721625434, 'recall': 0.629575059396474, 'f1': 0.6330159564573605}\n"
+      "\n",
+      "pred_lda\n",
+      "{'precision': 0.15348895831115014, 'recall': 0.13338026228901453, 'f1': 0.1427298298170722}\n",
+      "\n",
+      "pred_supervised_naivebayse\n",
+      "{'precision': 0.6364946721625434, 'recall': 0.629575059396474, 'f1': 0.6330159564573605}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "test_df = pd.read_csv(\"prediction/livedoor.csv\")\n",
-    "cluster_similarity_func = cluster_similarity_bcubed\n",
-    "print(\"ngram tfidf, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_trigram_tfidf_kmeans\"]))\n",
-    "print(\"word tfidf, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_word_tfidf_kmeans\"]))\n",
-    "print(\"fasttext, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_fasttext_kmeans\"]))\n",
-    "print(\"sentencebert, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_sentencebert_kmeans\"]))\n",
-    "print(\"bert, kmeans\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_bert_kmeans\"]))\n",
-    "print(\"supervised, naivebayse\")\n",
-    "print(cluster_similarity_func(test_df[\"category\"], test_df[\"pred_supervised_naivebayse\"]))\n"
+    "display_similarity(cluster_similarity_bcubed)"
    ]
   },
   {
